# next-harness

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARD.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.json
.cursor/: mcp.json
app/: __init__.py  main.py
app/adapters/: anthropic.py  chroma.py  gemini.py  mcp_client.py  ollama.py  openai.py  openai_embeddings.py  openai_tools.py  openrouter.py
app/api/: dependencies.py  ndjson.py  sse.py
app/api/routes/: auth.py  conversations.py  documents.py  health.py  notes.py  providers.py  tasks.py  tones.py  translations.py
app/core/: __init__.py  config.py  logging.py
app/db/: base.py  models.py  session.py
app/guardrails/: __init__.py
app/mcp/: __init__.py  __main__.py  context.py  http.py  identity.py  server.py
app/orchestration/: __init__.py  agent_graph.py  chat_graph.py
app/ports/: __init__.py  embeddings.py  llm.py  tools.py  vectorstore.py
app/repositories/: conversations.py  documents.py  notes.py  tasks.py  translations.py
app/schemas/: auth.py  conversation.py  document.py  note.py  task.py  translation.py
app/services/: auth.py  conversations.py  llm_errors.py  memory.py  note_styles.py  notes.py  rag.py  tasks.py  tokens.py  tones.py  translations.py
app/static/: index.html
app/tools/: __init__.py  builtins.py  mcp_invoker.py  protocol.py  registry.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CueApp.helpers.ts  CueApp.module.css  CueApp.tsx  CueApp.types.ts  CueApp.widgets.tsx
frontend/components/chat/: ChatPanel.tsx  useChat.ts
frontend/lib/: api.ts  types.ts
tests/: conftest.py  test_agent_loop.py  test_api.py  test_chroma_adapter.py  test_conversation_service.py  test_duo_conversations.py  test_guardrails.py  test_mcp_client.py  test_mcp_server.py  test_mcp_streamable_http.py  test_memory.py  test_notes_api.py  test_notes_service.py  test_openai_tools.py  test_rag_conversations.py  test_rag_service.py  test_tasks_service.py  test_tones.py  test_tool_registry.py  test_tools_protocol.py  test_translations_api.py  test_translations_service.py
(+8 files in other folders)
