[project]
name = "conversational-ai-backend"
version = "0.1.0"
description = "Production-grade conversational AI backend with FastAPI, LangGraph, Ollama, and durable memory."
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0,<0.22.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.32",
    "tenacity>=8.5.0",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
